--- a/openapi/components/schemas/checkSimulateAccrualSuccess.yaml
+++ b/openapi/components/schemas/checkSimulateAccrualSuccess.yaml
@@ -98,6 +98,8 @@ properties:
   posMessages:
     type: array
     description: A list of messages to be displayed to the cashier.
+    items:
+      type: string
   guestWebSite:
     type: string
     description: A URL where guests can login to see their balances and transaction history.
