--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,9 @@ on:
     - main
 
 jobs:
-  buildSpec:
-    name: Build Spec
+  build:
+    name: Build - Spec & Yardarm SDK
     runs-on: ubuntu-latest
-    outputs:
-      semVer: ${{ steps.gitversion.outputs.semVer }}
-      legacySemVerPadded: ${{ steps.gitversion.outputs.legacySemVerPadded }}
-      nuGetVersionV2: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
-
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -25,6 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x # for GitVersion
+
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v1
       with:
@@ -52,40 +48,28 @@ jobs:
     - name: Test
       run: npm run test
 
-    - name: Build
+    - name: Build - Spec
       run: npm run build
 
-    - name: Archive
+    - name: Upload - Spec
       uses: actions/upload-artifact@v4
       with:
         name: spec
         path: |
           dist
 
-  buildSdk:
-    name: Build SDK
-    needs:
-    - buildSpec
-
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/centeredge/yardarm:0.5.0-beta0002
-      options: --user root:root
-
-    steps:
-    - name: Download Spec
-      uses: actions/download-artifact@v4
+    - name: Build - Yardarm SDK
+      uses: CenterEdge/yardarm-action@v1
       with:
-        name: spec
-        path: dist
+        yardarm: 0.5.0-beta0002
+        pre-release: true
+        args: |
+          yardarm generate -i ./dist/centeredge-paytronixapi.yaml -f net6.0 netstandard2.0 --embed --nupkg ./dist/ -n CenterEdge.PaytronixApi -v ${{ steps.gitversion.outputs.nuGetVersionV2 }} -x Yardarm.SystemTextJson Yardarm.MicrosoftExtensionsHttp --repository-url https://github.com/${GITHUB_REPOSITORY}.git --repository-commit ${GITHUB_SHA}
 
-    - name: Build
-      run: yardarm generate -i ./dist/centeredge-paytronixapi.yaml -f net6.0 netstandard2.0 --embed --nupkg ./dist/ -n CenterEdge.PaytronixApi -v ${{ needs.buildSpec.outputs.nuGetVersionV2 }} -x Yardarm.SystemTextJson Yardarm.MicrosoftExtensionsHttp --repository-url https://github.com/${GITHUB_REPOSITORY}.git --repository-commit ${GITHUB_SHA}
+    - name: Setup - CenterEdge Nuget
+      uses: centeredge/ci-actions/dotnet/setup/nuget-feed@v1
+      with:
+        gh-packages-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push
-      working-directory: ./dist
-      # Publish CI packages from PRs and tagged releases
-      if: ${{ startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/pull/') }}
-      run: >-
-        dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github https://nuget.pkg.github.com/CenterEdge/index.json
-        && dotnet nuget push **/*.${{ needs.buildSpec.outputs.nuGetVersionV2 }}.nupkg -k ${{ secrets.GITHUB_TOKEN  }} -s github
+    - name: Push - Yardarm SDK
+      run: dotnet nuget push **/*.${{ steps.gitversion.outputs.nuGetVersionV2 }}.nupkg -k ${{ secrets.GITHUB_TOKEN  }} -s github
