--- a/openapi/paths/check/postAndAccruePoints.yaml
+++ b/openapi/paths/check/postAndAccruePoints.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-  - PostAndAccruePoints
+  - Checks
   summary: Post a check and accrue points
   description: |
     The check post and accrue points request allows for a simplified one-step flow for posting a check for analysis and accruing points with one action,
