--- a/openapi/paths/check/simulateAccrualAndRedemption.yaml
+++ b/openapi/paths/check/simulateAccrualAndRedemption.yaml
@@ -1,17 +1,17 @@
 post:
   tags:
-    - SimulateAccrualAndRedemption
+  - Checks
   summary: Simulate posting a check with redemption
   description: |
-    The check simulate accrual and redemption request is similar to the post and accrue points with auto-redeem request, 
-    with the difference that no points or rewards are actually applied. 
-    Instead, this endpoint takes in a check (with the same parameters as in the previous endpoint) and additionally a list of already applied rewards, 
-    the manner in which rewards are to be selected (either automatic or manual and specified with the request), and the details of the receipt printer associated with the request. 
-    If successful, it will return the applicable discounts (see DiscountItem), 
+    The check simulate accrual and redemption request is similar to the post and accrue points with auto-redeem request,
+    with the difference that no points or rewards are actually applied.
+    Instead, this endpoint takes in a check (with the same parameters as in the previous endpoint) and additionally a list of already applied rewards,
+    the manner in which rewards are to be selected (either automatic or manual and specified with the request), and the details of the receipt printer associated with the request.
+    If successful, it will return the applicable discounts (see DiscountItem),
     a list of attempted rewards that cannot be applied (including any previously applied rewards that are no longer applicable) and a new receipt text.
   operationId: checkSimulateAccrual
   security:
-    - basic_auth: []
+  - basic_auth: []
   requestBody:
     content:
       application/json:
