Add `check/postAndAccruePoints` and `check/redeemOnly` (ADV-23257) (#6)
# Motivations
We need these two new endpoints

# Modifications
- Add `check/redeemOnly` specification
- Correct the previous `check/postAndAccruePointsWithRedeem` specification, it looks like this was originally defined following the `check/postAndAccruePoints` documentation of the PTX api by mistake, there is major differences between the `check/postAndAccruePoints` and `check/postAndAccruePointsWithRedeem` responses so those need to be corrected
- Add `check/postAndAccruePoints` specification, this uses the same request body as `check/postAndAccruePointsWithRedeem` but the responses between the two endpoints are majorly different

# Breaking changes
- `check/postAndAccruePointsWithRedeem` operationId has been corrected from `checkPostAndAccrue` to `checkPostAndAccrueWithRedeem`, `check/postAndAccruePoints` now uses `checkPostAndAccrue`

# Notes
- I use a YAML formatter which formats all YAML arrays without two spaces before each array entry, if this isn't desired I can correct it

https://centeredge.atlassian.net/browse/ADV-23257

--- a/openapi/components/schemas/checkRedeemOnly.yaml
+++ b/openapi/components/schemas/checkRedeemOnly.yaml
@@ -18,11 +18,6 @@ properties:
   cardInfo:
     $ref: './cardInfo.yaml'
     description: Card to accrue points for.
-  autoActivateCard:
-    type: boolean
-    description: True if the card should automatically be activated if it is not already active. Defaults to false
-    default: false
-    example: false
   terminal:
     type: string
     description: Number of the POS terminal where the check was submitted for accrual, usually by closing the check. Use "0" if the terminal is unknown or unavailable. Maximum of 100 characters.
@@ -31,19 +26,15 @@ properties:
     type: string
     description: The POS operator (cashier) who submitted the check for accrual, usually by closing the check. Use "0" if the operator is unknown or unavailable.
     example: 0
-  receiptSettings:
-    type: array
-    description: List of receipt settings
-    minimum: 1
-    items:
-      $ref: './receiptSettings.yaml'
+  rewardSelectionMode:
+    $ref: './rewardSelectionMode.yaml'
+    description: Identifies whether to use automatic, manual, or applicable_rewards reward selection.
 
 required:
 - merchantId
 - storeCode
 - check
 - cardInfo
-- autoActivateCard
 - terminal
 - operator
-- receiptSettings
+- rewardSelectionMode
