Fix more attribute types

--- a/openapi/components/schemas/transactionDenied.yaml
+++ b/openapi/components/schemas/transactionDenied.yaml
@@ -5,7 +5,7 @@ properties:
     description: Result of the call. Must be 'denied'.
     example: denied
   errorCode:
-    type: integer
+    type: string
   errorMessage:
     type: string
   responseCode:
@@ -40,9 +40,10 @@ properties:
     description: Name of tier, e.g. "Unregistered".
     example: Unregistered
   tierCode:
-    type: string
+    type: number
+    format: 1nt64
     description: Code to identify the tier, e.g. 0.
-    example: 0  
+    example: 0
   cardTemplateCode:
     type: integer
     description: Code to uniquely identify the card template.
@@ -67,7 +68,7 @@ properties:
     type: number
     format: decimal
     description: Balance of Stored Value wallet.
-    example: 25.00 
+    example: 25.00
   svTransactionAmount:
     type: number
     format: decimal
@@ -77,7 +78,7 @@ properties:
     type: number
     format: decimal
     description: Previous balance of Stored Value wallet.
-    example: 5.00 
+    example: 5.00
   svriFlag:
     type: boolean
     description: Indicates whether Stored Value balance information is present in reply
@@ -116,4 +117,4 @@ required:
   - maskedCardNumber
   - cardTemplateCode
   - cardTemplateName
-  - pxTransactionId  
+  - pxTransactionId
