Add `transaction/accountQuery.json` (PHNX-14941)
# Motivations
We need to query for user accounts in our eCommerce

# Modifications
- Add the specs needed for `accountQuery`, this involved some duplicate yaml file names so I made the decision to stick this request and it's referenced yaml in it's own `accountQuery` directory under `schemas`

--- a/openapi/paths/transaction/reverse.yaml
+++ b/openapi/paths/transaction/reverse.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - Reverse transaction
+  - Transaction
   summary: Reverses a transaction
   description: |
     A reverse request is used to reverse a previous transaction. Only transactions that happened in the last seven days can be reversed.
@@ -16,7 +16,7 @@ post:
           $ref: '../../components/schemas/reverse.yaml'
     required: true
   security:
-    - basic_auth: []
+  - basic_auth: []
   responses:
     '200':
       description: Ok
