--- a/openapi/components/schemas/accountQuery/accountQueryReply.yaml
+++ b/openapi/components/schemas/accountQuery/accountQueryReply.yaml
@@ -1,12 +1,12 @@
 description: |
   Response information from a account query call
 oneOf:
-- $ref: './authorizedSuccess.yaml'
+- $ref: './accountQueryAuthorizedSuccess.yaml'
 - $ref: './userDataError.yaml'
 - $ref: '../transactionFailure.yaml'
 discriminator:
   propertyName: result
   mapping:
-    authorizedSuccess: './authorizedSuccess.yaml'
+    authorizedSuccess: './accountQueryAuthorizedSuccess.yaml'
     userDataError: './userDataError.yaml'
     failure: '../transactionFailure.yaml'
