--- a/openapi/components/schemas/accountQuery/accountQueryAuthorizedSuccess.yaml
+++ b/openapi/components/schemas/accountQuery/accountQueryAuthorizedSuccess.yaml
@@ -11,7 +11,7 @@ properties:
   header:
     type: object
     description:
-    $ref: './header.yaml'
+    $ref: './accountQueryHeader.yaml'
   identificationMethod:
     type: string
     description: Indicates how the request identified itself
@@ -41,8 +41,7 @@ properties:
   rows:
     type: array
     items:
-      $ref: './rows.yaml'
-    description: asd
+      $ref: './accountQueryRows.yaml'
   senderId:
     type: string
     description: Indicates the type of sender. Always POS unless instructed otherwise by Paytronix.
