--- a/openapi/components/schemas/accountQuery/accountQuery.yaml
+++ b/openapi/components/schemas/accountQuery/accountQuery.yaml
@@ -10,7 +10,7 @@ properties:
   accountQueries:
     type: array
     items:
-      $ref: './accountQueryQuery.yaml'
+      $ref: './accountQuery`.yaml'
 
 required:
 - headerInfo
