--- a/openapi/paths/enrollment/smsEnroll.yaml
+++ b/openapi/paths/enrollment/smsEnroll.yaml
@@ -1,10 +1,10 @@
 post:
   tags:
-    - SMS Enrollment
+  - Enrollment
   summary: Enroll in SMS
   description: |
     Enrolls the phone number in SMS notifications from Paytronix
-  operationId: smsEnroll  
+  operationId: smsEnroll
   requestBody:
     content:
       application/json:
@@ -13,7 +13,7 @@ post:
     description: Phone number to enroll
     required: true
   security:
-    - basic_auth: []
+  - basic_auth: []
   responses:
     '200':
       description: Ok
