--- a/openapi/components/responses/accountQueryResponse.yaml
+++ b/openapi/components/responses/accountQueryResponse.yaml
@@ -8,3 +8,4 @@ discriminator:
   mapping:
     authorizedSuccess: '../schemas/accountQuery/accountQueryAuthorizedSuccess.yaml'
     failure: '../schemas/error.yaml'
+    failed: '../schemas/error.yaml'
