--- a/openapi/components/responses/createAndRegisterResponse.yaml
+++ b/openapi/components/responses/createAndRegisterResponse.yaml
@@ -1,10 +1,12 @@
 description: |
   Response information from a create and register call.
 oneOf:
-- $ref: '../schemas/smsEnrollSuccess.yaml'
+- $ref: '../schemas/createAndRegisterCardCreatedSuccess.yaml'
+- $ref: '../schemas/createAndRegisterUniquenessConflict.yaml'
 - $ref: '../schemas/error.yaml'
 discriminator:
   propertyName: result
   mapping:
-    authorizedSuccess: '../schemas/smsEnrollSuccess.yaml'
+    cardCreatedSuccess: '../schemas/createAndRegisterCardCreatedSuccess.yaml'
+    uniquenessConflict: '../schemas/createAndRegisterUniquenessConflict.yaml'
     failure: '../schemas/error.yaml'
