--- a/openapi/components/schemas/setPerk.yaml
+++ b/openapi/components/schemas/setPerk.yaml
@@ -1,8 +1,12 @@
 type: object
 properties:
   code:
-    type: integer
+    type: string
     description: Paytronix-assigned perk code to set
-    example: 36
+    example: "1"
+  label:
+    type: string
+    example: Gluten Free
+
 required:
 - code
