--- a/openapi/components/schemas/createAndRegisterInvalidInputs.yaml
+++ b/openapi/components/schemas/createAndRegisterInvalidInputs.yaml
@@ -14,7 +14,7 @@ properties:
     example: Validation error for input fields
   errorsByField:
     type: object
-    additionalProperties:
+    properties:
       type: array
       items:
         type: object
