--- a/openapi/components/schemas/createAndRegisterInvalidInputs.yaml
+++ b/openapi/components/schemas/createAndRegisterInvalidInputs.yaml
@@ -14,16 +14,11 @@ properties:
     example: Validation error for input fields
   errorsByField:
     type: object
-    properties:
+    additionalProperties:
       type: array
       items:
         type: object
-        properties:
-          code:
-            type: string
-          text:
-            type: string
-    example: {"setUserFields/username": [{"code": "invalid_username_underscore", "text": "username cannot have leading underscores"}]}
+        $ref: './errorByFieldObject.yaml'
 
 required:
 - result
