--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/centeredge/yardarm:0.5.0-beta0002
+      image: ghcr.io/centeredge/yardarm:0.5.1
       options: --user root:root
 
     steps:
