[WIP] AddRedeemReply error messages

--- a/openapi/components/schemas/addRedeemReply.yaml
+++ b/openapi/components/schemas/addRedeemReply.yaml
@@ -1,6 +1,6 @@
 type: object
 allOf:
-  - $ref: './authorizedSuccess.yaml'
+  - $ref: './transactionReply.yaml'
 properties:
   addWalletContents:
     type: array
