--- a/openapi/components/schemas/addRedeemReply.yaml
+++ b/openapi/components/schemas/addRedeemReply.yaml
@@ -1,28 +1,15 @@
 type: object
 oneOf:
-  - $ref: './authorizedSuccess.yaml'
-  - $ref: './authorizedVariantSuccess.yaml'
+  - $ref: './addRedeemAuthorizedSuccess.yaml'
+  - $ref: './addRedeemAuthorizedVariantSuccess.yaml'
   - $ref: './transactionDenied.yaml'
   - $ref: './userDataError.yaml'
   - $ref: './transactionFailure.yaml'
 discriminator:
   propertyName: result
   mapping:
-    authorizedSuccess: './authorizedSuccess.yaml'
-    authorizedVariantSuccess: './authorizedVariantSuccess.yaml'
+    authorizedSuccess: './addRedeemAuthorizedSuccess.yaml'
+    authorizedVariantSuccess: './addRedeemAuthorizedVariantSuccess.yaml'
     denied: './transactionDenied.yaml'
     userDataError: './userDataError.yaml'
     failure: './transactionFailure.yaml'
-properties:
-  addWalletContents:
-    type: array
-    items:
-      $ref: './addWalletContents.yaml'
-  redeemWalletContents:
-    type: array
-    items:
-      $ref: './redeemWalletContents.yaml'
-  changedWalletContents:
-    type: array
-    items:
-      $ref: './changedWalletContents.yaml'
