Allow error messages in AddRedeemReply (ADV-23829) (#15)
Motivation
------------
The reply to addRedeem requests may also include error messages inherited from TransactionReply, but this is not currently available in the spec.

Modifications
---------------
Add appropriate model types inherited from the other models in such a way that Yardarm handles it correctly as well.

https://centeredge.atlassian.net/browse/ADV-23829

--- a/openapi/components/schemas/addRedeemReply.yaml
+++ b/openapi/components/schemas/addRedeemReply.yaml
@@ -1,16 +1,15 @@
 type: object
-allOf:
-  - $ref: './authorizedSuccess.yaml'
-properties:
-  addWalletContents:
-    type: array
-    items:
-      $ref: './addWalletContents.yaml'
-  redeemWalletContents:
-    type: array
-    items:
-      $ref: './redeemWalletContents.yaml'
-  changedWalletContents:
-    type: array
-    items:
-      $ref: './changedWalletContents.yaml'
+oneOf:
+  - $ref: './addRedeemAuthorizedSuccess.yaml'
+  - $ref: './addRedeemAuthorizedVariantSuccess.yaml'
+  - $ref: './transactionDenied.yaml'
+  - $ref: './userDataError.yaml'
+  - $ref: './transactionFailure.yaml'
+discriminator:
+  propertyName: result
+  mapping:
+    authorizedSuccess: './addRedeemAuthorizedSuccess.yaml'
+    authorizedVariantSuccess: './addRedeemAuthorizedVariantSuccess.yaml'
+    denied: './transactionDenied.yaml'
+    userDataError: './userDataError.yaml'
+    failure: './transactionFailure.yaml'
