Add authentication to smsEnroll endpoint (ADV-24294)
Motivation
----------
This was recommended by Paytronix in case they add other auth methods to
the endpoint in the future.

Modifications
-------------
- Add the value to the endpoint
- Upgrade Yardarm and reduce targets to .NET 8 only (all consumers are
  on .NET 8)

--- a/openapi/components/schemas/smsEnroll.yaml
+++ b/openapi/components/schemas/smsEnroll.yaml
@@ -1,5 +1,11 @@
 type: object
 properties:
+  authentication:
+    type: string
+    enum:
+      - b2b
+    description: The authentication type to use for the request
+    example: b2b
   merchantId:
     type: integer
     description: the merchant id provided by paytronix
@@ -12,7 +18,8 @@ properties:
     type: string
     description: Paytronix store code where the activation transaction should be performed.
     example: corp
-    
+
 required:
+  - authentication
   - merchantId
   - phoneNumber
