--- a/openapi/components/schemas/addRelatedGuests.yaml
+++ b/openapi/components/schemas/addRelatedGuests.yaml
@@ -4,11 +4,11 @@ properties:
     type: string
     enum:
       - b2b
-    description: The authentication type to use for the request
+    description: The authentication type to use for the request.
     example: b2b
   merchantId:
     type: integer
-    description: the merchant id provided by paytronix
+    description: The merchant id provided by paytronix.
     example: 1107
   username:
     type: string
